categorias que faltaram
criação das 2 ultimas categorias

--- a/techNovaStore/src/app/componentes/componentes.page.html
+++ b/techNovaStore/src/app/componentes/componentes.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button color="limao">Button</ion-back-button>
     </ion-buttons>
-    <ion-title color="limao">Eletronicos Domésticos</ion-title>
+    <ion-title color="limao">Componentes</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,11 +12,11 @@
   <ion-list>
     <ion-item color="dark" class="ion-small-padding">
       <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/JBLBar SoundBox.png" />
+        <img alt="Silhouette of mountains" src="../../assets/img/rtx_4090.png" />
       </ion-thumbnail>
       <ion-label>
-        <h2>JBL Sound Bar</h2>
-        <p>Bluetooth 5.1 - Preto</p>
+        <h2>Nvidia RTX 4090</h2>
+        <p>Nvidia</p>
       </ion-label>
       <ion-badge color="dark">R$ 1.490,50</ion-badge>
 
@@ -72,3 +72,4 @@
   </ion-list>
 
 </ion-content>
+
