--- a/techNovaStore/src/app/home/home.page.html
+++ b/techNovaStore/src/app/home/home.page.html
@@ -13,7 +13,7 @@
         <ion-col>
           <ion-card color="dark" class="ion-text-center"  routerLink="/promocoes">
             <img
-            src="../../assets/img/newcollection.png"
+            src="../../assets/img/promo.gif"
             alt="">
             <ion-item lines="none" color="dark">
               <ion-label class="titulo promocao">Confira Nossas Promoção</ion-label>
@@ -44,7 +44,7 @@
           </ion-card>
         </ion-col>
         <ion-col>
-          <ion-card color="dark" routerLink="/arcos">
+          <ion-card color="dark" routerLink="/smartphones">
             <img
             src="../../assets/img/smartphones.png"
             alt="">
@@ -54,7 +54,7 @@
           </ion-card>
         </ion-col>
         <ion-col>
-          <ion-card color="dark" routerLink="/adagas">
+          <ion-card color="dark" routerLink="/componentes">
             <img
             src="../../assets/img/produtos 4.png"
             alt="">
