--- a/techNovaStore/src/app/smartphones/smartphones.page.html
+++ b/techNovaStore/src/app/smartphones/smartphones.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button color="limao">Button</ion-back-button>
     </ion-buttons>
-    <ion-title color="limao">Eletronicos Domésticos</ion-title>
+    <ion-title color="limao">Smartphones</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,13 +12,13 @@
   <ion-list>
     <ion-item color="dark" class="ion-small-padding">
       <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/JBLBar SoundBox.png" />
+        <img alt="Silhouette of mountains" src="../../assets/img/$_57.png" />
       </ion-thumbnail>
       <ion-label>
-        <h2>JBL Sound Bar</h2>
-        <p>Bluetooth 5.1 - Preto</p>
+        <h2>Samsung Galax S23 Ultra 5g</h2>
+        <p>Modelo S23 Ultra 5g - Preto</p>
       </ion-label>
-      <ion-badge color="dark">R$ 1.490,50</ion-badge>
+      <ion-badge color="dark">R$ 8.490,50</ion-badge>
 
       <ion-button expand="block" slot="end">
         <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
@@ -27,13 +27,13 @@
 
     <ion-item color="dark" class="ion-small-padding">
       <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/CINEMA_610.png" />
+        <img alt="Silhouette of mountains" src="../../assets/img/iphone-14-pro-max_7386.png" />
       </ion-thumbnail>
       <ion-label>
-        <h2>JBL Home Theater Cinema 610</h2>
-        <p>Bluetooth 5.0 - Preto</p>
+        <h2>Iphone 14 Pro</h2>
+        <p>Modelo 14 Pro - Gold</p>
       </ion-label>
-      <ion-badge color="dark">R$ 2.275,00</ion-badge>
+      <ion-badge color="dark">R$ 7.275,00</ion-badge>
 
       <ion-button expand="block" slot="end">
         <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
@@ -42,13 +42,13 @@
 
     <ion-item color="dark" class="ion-small-padding">
       <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/tv.png" />
+        <img alt="Silhouette of mountains" src="../../assets/img/poco_m5.png" />
       </ion-thumbnail>
       <ion-label>
-        <h2>TV 50' TLC</h2>
-        <p>50 Polegadas 4K - Prata</p>
+        <h2>Xiaomi Poco M5</h2>
+        <p>Modelo Poco M5 - Preto</p>
       </ion-label>
-      <ion-badge color="dark">R$ 3.376,90</ion-badge>
+      <ion-badge color="dark">R$ 2.376,90</ion-badge>
 
       <ion-button expand="block" slot="end">
         <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
@@ -57,13 +57,13 @@
 
     <ion-item color="dark" class="ion-small-padding">
       <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/echo-dot-com-relogio-4a-geracao-smart-speaker-com-relogio-e-alexa_1_1200.png" />
+        <img alt="Silhouette of mountains" src="../../assets/img/S22.png" />
       </ion-thumbnail>
       <ion-label>
-        <h2>Alexa - Echo Dot Com Relógio</h2>
-        <p>4ª Geração - Branca</p>
+        <h2>Samsung Galax S22 5g</h2>
+        <p>Modelo S22 5g - Branco</p>
       </ion-label>
-      <ion-badge color="dark">R$ 1.233,70</ion-badge>
+      <ion-badge color="dark">R$ 3.233,70</ion-badge>
 
       <ion-button expand="block" slot="end">
         <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
