ultima aula com guia do professor

--- a/techNovaStore/src/app/promocoes/promocoes.page.html
+++ b/techNovaStore/src/app/promocoes/promocoes.page.html
@@ -1,11 +1,9 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="dark">
-    
+  <ion-toolbar color="dark" class="ion-small-padding">
     <ion-buttons slot="start">
       <ion-back-button color="limao">Button</ion-back-button>
     </ion-buttons>
-
-    <ion-title color="limao">Eletronicos Domésticos</ion-title>
+    <ion-title color="limao">Promoções</ion-title>
 
     <ion-buttons slot="end">
       <ion-button color="prata">
@@ -15,6 +13,7 @@
     </ion-buttons>  
 
   </ion-toolbar>
+  <ion-searchbar animated="true" placeholder="Animated" color="dark"></ion-searchbar>
 </ion-header>
 
 <ion-content fullscreen="true">
