--- a/techNovaStore/src/app/smartphones/smartphones.page.html
+++ b/techNovaStore/src/app/smartphones/smartphones.page.html
@@ -1,74 +1,39 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="dark">
+  <ion-toolbar color="dark" class="ion-small-padding">
     <ion-buttons slot="start">
       <ion-back-button color="limao">Button</ion-back-button>
     </ion-buttons>
     <ion-title color="limao">Smartphones</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button color="prata">
+        <ion-icon name="cart-outline"></ion-icon>
+        <ion-badge color="limao">{{qtdeItensCarrinho}}</ion-badge>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
+  <ion-searchbar animated="true" placeholder="Animated" color="dark"></ion-searchbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content fullscreen="true">
 
-  <ion-list>
-    <ion-item color="dark" class="ion-small-padding">
-      <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/$_57.png" />
-      </ion-thumbnail>
-      <ion-label>
-        <h2>Samsung Galax S23 Ultra 5g</h2>
-        <p>Modelo S23 Ultra 5g - Preto</p>
-      </ion-label>
-      <ion-badge color="dark">R$ 8.490,50</ion-badge>
+  <ion-item lines="full" *ngFor="let produto of listaProdutos">
+    <ion-thumbnail slot="start">
+      <img [src]="produto.foto" />
+    </ion-thumbnail>
 
-      <ion-button expand="block" slot="end">
-        <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
-      </ion-button>
-    </ion-item>
+    <ion-label color="dark">
+      <h2 class="custom-title">{{ produto.nome | uppercase }}</h2>
+      <p>{{ produto.descricao }}</p>
+    </ion-label>
 
-    <ion-item color="dark" class="ion-small-padding">
-      <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/iphone-14-pro-max_7386.png" />
-      </ion-thumbnail>
-      <ion-label>
-        <h2>Iphone 14 Pro</h2>
-        <p>Modelo 14 Pro - Gold</p>
-      </ion-label>
-      <ion-badge color="dark">R$ 7.275,00</ion-badge>
+    <ion-badge color="dark">R$ {{ produto.preco | number: '1.2-2' }}</ion-badge>
 
-      <ion-button expand="block" slot="end">
-        <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
-      </ion-button>
-    </ion-item>
+    <ion-button expand="block" slot="end" color="dark" (click)="addProdutoCarrinho(produto)">
+      <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
+    </ion-button>
 
-    <ion-item color="dark" class="ion-small-padding">
-      <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/poco_m5.png" />
-      </ion-thumbnail>
-      <ion-label>
-        <h2>Xiaomi Poco M5</h2>
-        <p>Modelo Poco M5 - Preto</p>
-      </ion-label>
-      <ion-badge color="dark">R$ 2.376,90</ion-badge>
-
-      <ion-button expand="block" slot="end">
-        <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
-      </ion-button>
-    </ion-item>
-
-    <ion-item color="dark" class="ion-small-padding">
-      <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="../../assets/img/S22.png" />
-      </ion-thumbnail>
-      <ion-label>
-        <h2>Samsung Galax S22 5g</h2>
-        <p>Modelo S22 5g - Branco</p>
-      </ion-label>
-      <ion-badge color="dark">R$ 3.233,70</ion-badge>
-
-      <ion-button expand="block" slot="end">
-        <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
-      </ion-button>
-    </ion-item>
-  </ion-list>
-
+  </ion-item>
 </ion-content>
+
