--- a/techNovaStore/src/app/carrinho/carrinho.page.html
+++ b/techNovaStore/src/app/carrinho/carrinho.page.html
@@ -1,20 +1,55 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="dark" class="ion-small-padding">
+<ion-header>
+  <ion-toolbar color="roxoclaro">
 
     <ion-buttons slot="start">
-      <ion-back-button color="limao">Button</ion-back-button>
+      <ion-back-button color="roxolilas">Button</ion-back-button>
     </ion-buttons>
 
-    <ion-title color="limao">Carrinho</ion-title>
-
-    <ion-buttons slot="end">
-      <ion-button color="prata">
-        <ion-icon name="cart-outline"></ion-icon>
-        <ion-badge color="limao">{{qtdeItensCarrinho}}</ion-badge>
-      </ion-button>
-    </ion-buttons>
+    <ion-title>Carrinho</ion-title>
 
   </ion-toolbar>
 </ion-header>
 
+<ion-content [fullscreen]="true" class="ion-color-roxoclaro-background">
 
+  <ion-list *ngIf="listaProdutos.length > 0; else emptyState">
+    <ion-card color="roxoclaro">
+      <ion-item *ngFor="let produto of listaProdutos; let i = index">
+
+        <ion-thumbnail slot="start">
+          <img [src]="produto.foto" alt="Imagem do Produto">
+        </ion-thumbnail>
+
+        <ion-label color="roxolilas">
+          <h2>{{ produto.nome }}</h2>
+          <p>{{ produto.descricao }}</p>
+          <p>Preço: R$ {{ produto.preco | number: '1.2-2' }}</p>
+          <ion-button color="roxoclaro" (click)="removerItem(i)">Remover</ion-button>
+        </ion-label>
+      </ion-item>
+    </ion-card>
+  </ion-list>
+
+  <ng-template #emptyState>
+    <ion-text color="danger" class="ion-text-center">
+      O carrinho está vazio.
+    </ion-text>
+  </ng-template>
+
+  <ion-item-divider color="roxomedio">
+    <ion-label>Total:</ion-label>
+    <ion-label>R$ {{ total | number: '1.2-2' }}</ion-label>
+  </ion-item-divider>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-button expand="full" color="danger" (click)="limparCarrinho()">Limpar Carrinho</ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <ion-button expand="full" color="roxoclaro" (click)="concluirCompra()">Concluir Compra</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  </ion-content>
