--- a/techNovaStore/src/app/gamer/gamer.page.html
+++ b/techNovaStore/src/app/gamer/gamer.page.html
@@ -1,5 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="dark" class="ion-small-padding">
+<ion-header>
+  <ion-toolbar>
 
     <ion-buttons slot="start">
       <ion-back-button color="limao">Button</ion-back-button>
