--- a/techNovaStore/src/app/gamer/gamer.page.html
+++ b/techNovaStore/src/app/gamer/gamer.page.html
@@ -1,17 +1,16 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="roxoclaro">
 
     <ion-buttons slot="start">
-      <ion-back-button color="limao">Button</ion-back-button>
+      <ion-back-button color="roxolilas"></ion-back-button>
     </ion-buttons>
 
-    <ion-title color="limao">Gaming Gear</ion-title>
-
+    <ion-title>Gaming Gear</ion-title>
 
     <ion-buttons slot="end" routerLink="/carrinho">
-      <ion-button color="prata">
+      <ion-button color="roxolilas">
         <ion-icon name="cart-outline"></ion-icon>
-        <ion-badge color="limao">{{qtdeItensCarrinho}}</ion-badge>
+        <ion-badge>{{qtdeItensCarrinho}}</ion-badge>
       </ion-button>
     </ion-buttons>
 
@@ -20,21 +19,24 @@
 
 <ion-content fullscreen="true">
 
-  <ion-item lines="full" *ngFor="let produto of listaProdutos">
-    <ion-thumbnail slot="start">
-      <img [src]="produto.foto" />
-    </ion-thumbnail>
+  <ion-list>
+    <ion-item lines="full" *ngFor="let produto of listaProdutos" color="roxomedio">
 
-    <ion-label color="dark">
-      <h2 class="custom-title">{{ produto.nome | uppercase }}</h2>
-      <p>{{ produto.descricao }}</p>
-    </ion-label>
-
-    <ion-badge color="dark">R$ {{ produto.preco | number: '1.2-2' }}</ion-badge>
-
-    <ion-button expand="block" slot="end" color="dark" (click)="addProdutoCarrinho(produto)">
-      <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
-    </ion-button>
-
-  </ion-item>
+      <ion-thumbnail slot="start">
+        <img [src]="produto.foto" />
+      </ion-thumbnail>
+    
+      <ion-label>
+        <h2 class="custom-title">{{ produto.nome | uppercase }}</h2>
+        <p>{{ produto.descricao }}</p>
+      </ion-label>
+    
+      <ion-badge color="roxoescuro">R$ {{ produto.preco | number: '1.2-2' }}</ion-badge>
+    
+      <ion-button expand="block" slot="end" color="roxolilas" (click)="addProdutoCarrinho(produto)">
+        <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
+      </ion-button>
+    
+    </ion-item>
+  </ion-list>
 </ion-content>
